--- a/index.html
+++ b/index.html
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>TeamON</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+<head>
+    <meta charset="UTF-8">
+    <title>TeamON</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
 
-        <style>
-            * {
-                padding: 0;
-                margin: 0;
-                box-sizing: border-box;
-            }
+        html, body {
+            height: 100%;
+            width: 100%;
+        }
 
-            html, body {
-                height: 100%;
-                width: 100%;
-            }
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-            body {
-                display: flex;
-                flex-direction: column;
-            }
+        #google-map {
+            width: 100vw;
+            height: 100vh;
+            border: 10px solid #ccc;
+            box-sizing: border-box;
+        }
 
-            #google-map {
-                width: 100vw;
-                height: 100vh;
-                border: 10px solid #ccc; 
-                box-sizing: border-box; 
-            }
+        h1 {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 5px;
+            font-size: 18px;
+            padding: 5px 10px;
+            z-index: 1000;
+        }
 
-            h1 {
-                position: absolute; 
-                top: 10px;
-                left: 50%;
-                transform: translateX(-50%);
-                background: rgba(255, 255, 255, 0.8); 
-                border-radius: 5px;
-                font-size: 18px;
-            }
-        </style>
-    </head>
+        #near-me-btn {
+            position: absolute;
+            top: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1000;
+        }
+    </style>
+</head>
 
-    <body>
-
-        <div id="google-map">
-
-        </div>
-
-    </body>
+<body>
+    <h1>TeamON Map</h1>
+    <button id="near-me-btn">Show Near Me</button>
+    <div id="google-map"></div>
 
     <script defer src="https://maps.googleapis.com/maps/api/js?key=//KEY//&callback=initMap"></script>
     <script src="script.js"></script>
+</body>
 
 </html>
