--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         #google-map {
             width: 100vw;
             height: 100vh;
-            border: 10px solid #ccc;
+            border: 5px solid #ccc;
             box-sizing: border-box;
         }
 
@@ -53,15 +53,15 @@
             transform: translateX(-50%);
             z-index: 1000;
         }
+        
     </style>
 </head>
 
 <body>
-    <h1>TeamON Map</h1>
     <button id="near-me-btn">Show Near Me</button>
     <div id="google-map"></div>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=//KEY//&callback=initMap"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDikvvZbmzQpOUwgfYJ9txHYUTVW4bnHLM&callback=initMap"></script>
     <script src="script.js"></script>
 </body>
 
