--- a/index.html
+++ b/index.html
@@ -8,60 +8,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
 
-        html, body {
-            height: 100%;
-            width: 100%;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #google-map {
-            width: 100vw;
-            height: 100vh;
-            border: 5px solid #ccc;
-            box-sizing: border-box;
-        }
-
-        h1 {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 5px;
-            font-size: 18px;
-            padding: 5px 10px;
-            z-index: 1000;
-        }
-
-        #near-me-btn {
-            position: absolute;
-            top: 50px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1000;
-        }
-        
-    </style>
+    <!-- IMPORT GOOGLE ICONS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
-    <button id="near-me-btn">Show Near Me</button>
+    <button id="near-me-btn">Places Near Me</button>
+    <div class="home-menu">
+        <h1 class="title">WhereToStudy?</h1>
+
+        <header class="input-container">
+            <input class="study-place-input" placeholder="Write a review!" type="text">
+            <button class="search-btn">
+                <span class="material-symbols-outlined">
+                    reviews
+                </span>
+            </button>
+        </header>
+    </div>
+
     <div id="google-map"></div>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDikvvZbmzQpOUwgfYJ9txHYUTVW4bnHLM&callback=initMap"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBbTKPDkid2ItrD-UgmXuUnGzSJqg5O_8&callback=initMap"></script>
     <script src="script.js"></script>
 </body>
 
