--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="google-map"></div>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key= AIzaSyCBbTKPDkid2ItrD-UgmXuUnGzSJqg5O_8 &callback=initMap"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key= API_KEY &callback=initMap"></script>
     <script src="script.js"></script>
 </body>
 
