--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <script src="script.js" defer></script>
 
     <!-- IMPORT GOOGLE ICONS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -18,19 +22,42 @@
     <div class="home-menu">
         <h1 class="title">WhereToStudy?</h1>
 
-        <header class="input-container">
-            <input class="study-place-input" placeholder="Write a review!" type="text">
-            <button class="search-btn">
+        <h2 id="selected-place">&nbsp;</h2>
+
+        <div class="input-container">
+            <textarea id="study-place-input" class="study-place-input" placeholder="Write a review!" type="text"
+                columns="50" rows="4"></textarea>
+            <!-- <button class="search-btn" title="Send review">
                 <span class="material-symbols-outlined">
                     reviews
                 </span>
-            </button>
-        </header>
+            </button> -->
+        </div>
+        <div id="rating-starts">
+            <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
+                data-rating="1"></span>
+            <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
+                data-rating="2"></span>
+            <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
+                data-rating="3"></span>
+            <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
+                data-rating="4"></span>
+            <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
+                data-rating="5"></span>
+        </div>
+        <div id="rating-comments">
+
+        </div>
+
+        
+
+
     </div>
 
     <div id="google-map"></div>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key= API_KEY &callback=initMap"></script>
+    <script defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBbTKPDkid2ItrD-UgmXuUnGzSJqg5O_8&callback=initMap"></script>
     <script src="script.js"></script>
 </body>
 
