--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="home-menu">
         <h1 class="title">WhereToStudy?</h1>
 
-        <h2 id="selected-place">&nbsp;</h2>
+        <h2 id="selected-place" style = "color: #a0a886;">&nbsp;</h2>
 
         <div class="input-container">
-            <textarea id="study-place-input" class="study-place-input" placeholder="Write a review!" type="text"
-                columns="50" rows="4"></textarea>
+            <textarea id="study-place-input" class="study-place-input" placeholder="Write a review!" type="text"></textarea>
         </div>
+        
 
         <div id="rating-starts">
             <span onmouseover="onRatingStarsOver(this)" style="cursor: pointer;" onclick="onRatingClicked(this)" class="star-rating fa fa-star"
@@ -52,7 +52,7 @@
     <div id="google-map"></div>
 
     <script defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBbTKPDkid2ItrD-UgmXuUnGzSJqg5O_8&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=//KEY//=initMap"></script>
     <script src="script.js"></script>
 </body>
 
